results/SVCOMP/4-shot/log-ExSymExe29-2024_03_18_19_51_17.txt
class Main {

  //@ requires x == 3;
  //@ requires z == 5;
  //@ requires r == 9;
  //@ ensures \result <==> z != x && x != r;
  public static boolean f() {
    int x = 3;
    int y = 5;
    Main inst = new Main();
    return inst.test(x, y, 9);
  }

  //@ requires x == 3;
  //@ requires z == 5;
  //@ requires r == 9;
  //@ ensures \result <==> z != x && x != r;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe29");
    if (z != x) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x != r) System.out.println("branch BOO1");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe29.java:3: error: cannot find symbol
  //@ requires x == 3;
               ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe29.java:4: error: cannot find symbol
  //@ requires z == 5;
               ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe29.java:5: error: cannot find symbol
  //@ requires r == 9;
               ^
  symbol:   variable r
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe29.java:6: error: cannot find symbol
  //@ ensures \result <==> z != x && x != r;
                           ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe29.java:6: error: cannot find symbol
  //@ ensures \result <==> z != x && x != r;
                                ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe29.java:6: error: cannot find symbol
  //@ ensures \result <==> z != x && x != r;
                                     ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe29.java:6: error: cannot find symbol
  //@ ensures \result <==> z != x && x != r;
                                          ^
  symbol:   variable r
  location: class Main
7 errors

